src/snapshots/noyobo_style_factory__css_to_code__tests__tow_prefix.snap
---
source: src/css_to_code.rs
expression: output.trim()
---
export default function styleFactory(options) {
  var prefix = options.prefix || '';
  var tag = options.tag || function (tag) { return tag; };
  var rpx = options.rpx;
  var host = options.host || 'host-placeholder';
  var css = ["." , prefix , "a{width:" , rpx(100) , "px}." , prefix , "b{height:" , rpx(50) , "px}", ""].join("");
  var hostStyleText = ["[is=" , host , "]{color:#000;width:" , rpx(100) , "px;height:" , rpx(20) , "px}", ""].join("");
if (options.hostStyle) {
    options.hostStyle(hostStyleText);
} else {
    css = hostStyleText + css;
}
  return css;
}
